Closed
Bug 705998
Opened 14 years ago
Closed 14 years ago
IonMonkey: ion/bug674694.js hangs with greedy allocator
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: jandem, Assigned: jandem)
References
Details
Attachments
(2 files)
2.01 KB,
patch
|
dvander
:
review+
|
Details | Diff | Splinter Review |
849 bytes,
patch
|
dvander
:
review+
|
Details | Diff | Splinter Review |
Seems to be a regression from my block reordering patch (bug 699415). I'll investigate.
Assignee | ||
Comment 1•14 years ago
|
||
Reduced:
function f0(p0) {
do {
} while (p0);
while (p0) {
do {
} while (p0);
}
}
f0(0);
Assignee | ||
Comment 2•14 years ago
|
||
The block ordering change broke FindNaturalLoops, it has to see inner backedges before outer backedges.
Attachment #577523 -
Flags: review?(sstangl)
![]() |
||
Updated•14 years ago
|
Attachment #577523 -
Flags: review?(sstangl) → review+
Assignee | ||
Comment 3•14 years ago
|
||
Thanks for the quick review.
http://hg.mozilla.org/projects/ionmonkey/rev/10b888d2474a
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Comment 4•14 years ago
|
||
The issue is not entirely fixed: the assert introduced by the above patch trips basic/innerLoopIntOuterDouble.js with --ion --ion-regalloc=greedy.
Unfortunately, the assert must know about the osrBlock's ID.
Attachment #577807 -
Flags: review?(dvander)
Updated•14 years ago
|
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
![]() |
||
Updated•14 years ago
|
Attachment #577807 -
Flags: review?(dvander) → review+
Comment 5•14 years ago
|
||
Status: REOPENED → RESOLVED
Closed: 14 years ago → 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•