Fix FindNaturalLoops to work with new block ordering (bug 705998, r=dvander)